# mythril-agent-bgm

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  pyproject.toml
aibgm/: cli.py
aibgm/commands/: cleanup.py
aibgm/commands/integrations/: __init__.py  claude.py  cursor_agent.py  gemini.py  iflow.py  opencode.py
docs/: Dev.md  OpenCode-Plugin-Issues.md
mythril_agent_bgm/commands/: cleanup.py  select.py  setup.py
mythril_agent_bgm/commands/integrations/: README.md  __init__.py  claude.py  copilot.py  mimo.py  opencode.py  registry.py
scripts/: bump-version.py  publish.py
src/mythril_agent_bgm/: cli.py  config.json
src/mythril_agent_bgm/commands/: __init__.py  disable.py  enable.py  play.py  select.py  setup.py  stop.py  toggle.py
src/mythril_agent_bgm/commands/integrations/: __init__.py  cursor_agent.py  gemini.py  mimo.py  opencode.py  registry.py
src/mythril_agent_bgm/utils/: __init__.py  colors.py  common.py  logger.py  platform_utils.py  process.py
