[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mythril-agent-bgm"
version = "0.1.4"
description = "AI CLI Background Music Player - Plays work music in loop and done music when finished"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Jie Meng", email = "jmengx@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

keywords = ["ai", "background-music", "bgm", "productivity", "cli"]

dependencies = [
    "pygame>=2.6.1",
    "click>=8.3.1",
]

[project.urls]
Homepage = "https://github.com/jie-meng/mythril-agent-bgm"
Repository = "https://github.com/jie-meng/mythril-agent-bgm"
Issues = "https://github.com/jie-meng/mythril-agent-bgm/issues"

[project.scripts]
bgm = "mythril_agent_bgm.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["mythril_agent_bgm*"]
exclude = ["tests", "tests.*"]
namespaces = false

[tool.setuptools.package-data]
mythril_agent_bgm = ["*.json", "sounds/*.mp3"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
